Provide a potential solution for a potential white space issue

--- a/css/app.css
+++ b/css/app.css
@@ -4,6 +4,8 @@ body {
 
 nav {
   z-index: 100;
+  position: relative;
+  top: 88px;
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -51,6 +53,8 @@ site to shift everything upward equal to the pixel height of the navbar. */
 .reposition {
   position: relative;
   top: -88px;
+  /* TODO: Check if this eliminates white space at the end of the page */
+  /* margin-bottom: -88px; */
 }
 
 .services-section {
